# wasm-bevy-snake-game

./: Cargo.toml  index.html
pkg/: bevy_snake.d.ts  bevy_snake.js  bevy_snake_bg.wasm.d.ts  package.json
src/: lib.rs
