[package]
name = "bevy-snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'
lto = "thin"

[dependencies]
bevy = "0.9.1"
rand = "0.8.5"
wasm-bindgen = "0.2.83"

[lib]
crate-type = ["cdylib", "rlib"]
